--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.sendtion.xrichtextdemo.ui.MainActivity">
     <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="102"
+        android:title="search"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/action_new_note"
-        android:orderInCategory="100"
-        android:title=""
         android:icon="@mipmap/icon_new"
+        android:orderInCategory="103"
+        android:title=""
         app:showAsAction="always" />
 </menu>
