--- a/app/src/main/res/layout/list_item_note.xml
+++ b/app/src/main/res/layout/list_item_note.xml
@@ -10,10 +10,11 @@
     app:cardElevation="1dp">
 
     <RelativeLayout
+        android:id="@+id/note_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/activity_margin_10"
-        android:background="?android:attr/selectableItemBackground">
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="@dimen/activity_margin_10">
 
         <TextView
             android:id="@+id/tv_list_title"
@@ -27,8 +28,8 @@
             android:id="@+id/tv_list_summary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:layout_below="@+id/tv_list_title"
+            android:layout_marginTop="5dp"
             android:maxLines="2"
             android:text="笔记摘要"
             android:textColor="@color/grey_700"
@@ -39,9 +40,9 @@
             android:id="@+id/tv_list_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/tv_list_summary"
             android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv_list_summary"
+            android:layout_marginTop="10dp"
             android:text="时间"
             android:textColor="@color/grey_600"
             android:textSize="@dimen/text_size_14" />
